[package]
name = "ttds_bindings"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.14", features = ["native-tls-vendored"] }
anyhow = "1.0.97"
url-builder = "0.1.1"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] } 
log = "0.4.26"
env_logger = "0.11.7"

[lib]
crate-type = ["lib"]
